@@ -1,0 +1,44 @@
+## Developer Certificate of Origin + Licenses
+
+**By contributing to the Parrot Project, you accept and agree to the following terms and conditions for your present and future Contributions submitted to the Parrot Project.**
+
+Except for the license granted herein to Parrot Project and recipients of software distributed by Parrot Project, You reserve all right, title, and interest in and to your Contributions.
+
+## Developer Certificate of Origin
+```text
+Version 1.1
+
+Copyright (C) 2004, 2006 The Linux Foundation and its contributors.
+1 Letterman Drive
+Suite D4700
+San Francisco, CA, 94129
+
+Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
+
+Developer's Certificate of Origin 1.1
+
+By making a contribution to this project, I certify that:
+
+(a) The contribution was created in whole or in part by me and I have the right to submit it under the open source license indicated in the file; or
+
+(b) The contribution is based upon previous work that, to the best of my knowledge, is covered under an appropriate open source license and I have the right under that license to submit that work with modifications, whether created in whole or in part by me, under the same open source license (unless I am permitted to submit under a different license), as indicated in the file; or
+
+(c) The contribution was provided directly to me by some other  person who certified (a), (b) or (c) and I have not modified it.
+
+(d) I understand and agree that this project and the contribution are public and that a record of the contribution (including all personal information I submit with it, including my sign-off) is maintained indefinitely and may be redistributed consistent with this project or the open source license(s) involved.
+```
+
+**All Contributions to Parrot Project repositories are licensed under the following licenses:**
+
+## Software and code
+1) [GNU GPL v3](https://www.gnu.org/licenses/gpl-3.0.en.html)
+Copyright 2007-Present time, Lorenzo "Palinuro" Faletra
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+## Everything else
+2) [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/)
+Copyright 2007-Present time, Lorenzo "Palinuro" Faletra
+All Documentation, artwork and any media not covered by the license above, is licensed under Creative Commons: CC BY-SA 4.0.
+
+**Note:** Palinuro is the current copyright and license holder for the Parrot Project as a temporary measure. All licenses and copyrights will eventually be transfered to a non-profit we are setting up to enable better transparency (we hope to have more details in the fall of 2019).
