@@ -94,8 +94,8 @@ $lang['download-28']		= 'Debian Version';
 $lang['download-29']		= 'Debian 10 Buster';
 $lang['download-30']		= 'Release Model';
 $lang['download-31']		= 'Rolling Release';
-$lang['download-32']		= 'Default Desktop Environment';
-$lang['download-33']		= 'MATE 1.20';
+$lang['download-32']		= 'Default Desktop Environments';
+$lang['download-33']		= 'MATE 1.20/KDE Plasma';
 $lang['download-34']		= 'Sandbox';
 $lang['download-35']		= 'Office Suite';
 $lang['download-36']		= 'LibreOffice 6.x';
