@@ -94,7 +94,7 @@ $lang['download-29']			= 'Debian 10 Buster';
 $lang['download-30']			= 'Modelo de Lanzamiento';
 $lang['download-31']			= 'Rolling Release (Lanzamiento Rodante)';
 $lang['download-32']			= 'Entorno de Escritorio por Defecto';
-$lang['download-33']			= 'MATE 1.20';
+$lang['download-33']			= 'MATE 1.20/KDE Plasma';
 $lang['download-34']			= 'Aislamiento';
 $lang['download-35']			= 'Paquete de Oficina';
 $lang['download-36']			= 'LibreOffice 6.x';
