@@ -95,7 +95,7 @@ $lang['download-29']		= 'Debian 10 Buster';
 $lang['download-30']		= 'مدل انتشار';
 $lang['download-31']		= 'انتشار رولینگ';
 $lang['download-32']		= 'محیط دسکتاپ پیش فرض';
-$lang['download-33']		= 'MATE 1.20';
+$lang['download-33']		= 'MATE 1.20/KDE Plasma';
 $lang['download-34']		= 'Sandbox';
 $lang['download-35']		= 'Office Suite';
 $lang['download-36']		= 'LibreOffice 6.x';
