@@ -95,7 +95,7 @@ $lang['download-29']		= 'Debian 10 Buster';
 $lang['download-30']		= 'Modèle de déploiement';
 $lang['download-31']		= 'Publication continue';
 $lang['download-32']		= 'Environnement de bureau par défaut';
-$lang['download-33']		= 'MATE 1.20';
+$lang['download-33']		= 'MATE 1.20/KDE Plasma';
 $lang['download-34']		= 'Sandbox';
 $lang['download-35']		= 'Suite Office';
 $lang['download-36']		= 'LibreOffice 6.x';
