@@ -91,7 +91,7 @@ $lang['download-29']		= 'Debian 10 Buster';
 $lang['download-30']		= 'Модель релиза';
 $lang['download-31']		= 'Rolling Release';
 $lang['download-32']		= 'Рабочее окружение по умолчанию';
-$lang['download-33']		= 'MATE 1.20';
+$lang['download-33']		= 'MATE 1.20/KDE Plasma';
 $lang['download-34']		= 'Sandbox';
 $lang['download-35']		= 'Набор Office';
 $lang['download-36']		= 'LibreOffice 6.x';
