@@ -1,6 +1,7 @@
 2019/04/25
 
 - Added KDE Security Editon and prepped for 4.6
+- Added LICENSES file
 
   -s1udge
 
